{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 0,
  "lineage": "36414ff5-5b2f-5186-e888-a8b330991945",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:928193545380:vpc/vpc-0caf528f09360c893",
            "cidr_block": "10.99.249.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ae31cdf44b2de7ec",
                "cidr_block": "10.99.249.0/24",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-07742df79ba520135",
                "cidr_block": "100.64.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0392f9771a5f97ef1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0caf528f09360c893",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c950190bfa721809",
            "owner_id": "928193545380",
            "state": "available",
            "tags": {
              "AWS_Solutions": "LandingZoneStackSet",
              "Associate-with": "Isolated",
              "Name": "aws-landing-zone-VPC",
              "Propagate-to": "Flat,On-premises,Infrastructure",
              "STNOStatus-VPC-Error": "2021-10-20T12:19:17Z: An error occurred (InvalidParameterValue) when calling the CreateTransitGatewayVpcAttachment operation: vpc-0caf528f09360c893 was already attached to a TGW",
              "STNOStatus-VPCAssociation": "2021-10-20T12:21:19Z: VPC has been associated with the Transit Gateway Routing Table/Domain",
              "STNOStatus-VPCAttachment": "2021-10-20T12:19:16Z: VPC has been attached to the Transit Gateway",
              "STNOStatus-VPCPropagation": "2021-10-20T12:21:21Z: VPC RT propagation has been enabled to the Transit Gateway Routing Table/Domain"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cassandra_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:928193545380:security-group/sg-09df7b32ffc19ea6a",
            "description": "Security group for Cassandra",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09df7b32ffc19ea6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 7000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 7000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 7001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 7001
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 7199,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 7199
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 9042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9042
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/16"
                ],
                "description": "",
                "from_port": 9042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9042
              }
            ],
            "name": "cassandra-cluster001-dev-sg",
            "name_prefix": "",
            "owner_id": "928193545380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "cassandra-cluster001",
              "Terraform-managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf528f09360c893"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_exporter_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:928193545380:security-group/sg-03469877962b615f5",
            "description": "Security group for Node Exporter",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03469877962b615f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 9101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9101
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/16"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/16"
                ],
                "description": "",
                "from_port": 9101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9101
              }
            ],
            "name": "cassandra-cluster001-dev-ne",
            "name_prefix": "",
            "owner_id": "928193545380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "cassandra-cluster001",
              "Terraform-managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf528f09360c893"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:928193545380:security-group/sg-0342fd9e5c1e49f6b",
            "description": "Security group for ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0342fd9e5c1e49f6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.96.0.0/15"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cassandra-cluster001-dev-ssh",
            "name_prefix": "",
            "owner_id": "928193545380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "cassandra-cluster001",
              "Terraform-managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf528f09360c893"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.cassandra_ec2_instances_1a",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:928193545380:subnet/subnet-05b75edb1c66fbc9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "available_ip_address_count": 79,
            "cidr_block": "10.99.249.0/25",
            "default_for_az": false,
            "id": "subnet-05b75edb1c66fbc9b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928193545380",
            "state": "available",
            "tags": {
              "AWS_Solutions": "LandingZoneStackSet",
              "Attach-to-tgw": "",
              "Name": "aws-landing-zone-PrivateSubnet1A",
              "Network": "Private",
              "STNOStatus-Subnet": "2021-10-20T12:19:16Z: Subnet added to the TGW attachment."
            },
            "vpc_id": "vpc-0caf528f09360c893"
          }
        }
      ]
    },
    {
      "module": "module.cassandra_ec2_instances_1a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.cassandra_ec2_instances_1b",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:928193545380:subnet/subnet-051b87b1363f2b2df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "available_ip_address_count": 104,
            "cidr_block": "10.99.249.128/25",
            "default_for_az": false,
            "id": "subnet-051b87b1363f2b2df",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928193545380",
            "state": "available",
            "tags": {
              "AWS_Solutions": "LandingZoneStackSet",
              "Attach-to-tgw": "",
              "Name": "aws-landing-zone-Private subnet 2A",
              "Network": "Private",
              "STNOStatus-Subnet": "2022-06-03T14:39:52Z: Subnet appended to the TGW attachment."
            },
            "vpc_id": "vpc-0caf528f09360c893"
          }
        }
      ]
    },
    {
      "module": "module.cassandra_ec2_instances_1b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.cassandra_elb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:928193545380:vpc/vpc-0caf528f09360c893",
            "cidr_block": "10.99.249.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ae31cdf44b2de7ec",
                "cidr_block": "10.99.249.0/24",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-07742df79ba520135",
                "cidr_block": "100.64.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0392f9771a5f97ef1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0caf528f09360c893",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c950190bfa721809",
            "owner_id": "928193545380",
            "state": "available",
            "tags": {
              "AWS_Solutions": "LandingZoneStackSet",
              "Associate-with": "Isolated",
              "Name": "aws-landing-zone-VPC",
              "Propagate-to": "Flat,On-premises,Infrastructure",
              "STNOStatus-VPC-Error": "2021-10-20T12:19:17Z: An error occurred (InvalidParameterValue) when calling the CreateTransitGatewayVpcAttachment operation: vpc-0caf528f09360c893 was already attached to a TGW",
              "STNOStatus-VPCAssociation": "2021-10-20T12:21:19Z: VPC has been associated with the Transit Gateway Routing Table/Domain",
              "STNOStatus-VPCAttachment": "2021-10-20T12:19:16Z: VPC has been attached to the Transit Gateway",
              "STNOStatus-VPCPropagation": "2021-10-20T12:21:21Z: VPC RT propagation has been enabled to the Transit Gateway Routing Table/Domain"
            }
          }
        }
      ]
    },
    {
      "module": "module.cassandra_elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.cassandra_elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.cassandra_elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}